--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
+    <string name="default_web_client_id" translatable="false">166568371444-j9bqr27jjv3ut3bogrqep8in4gri1fb0.apps.googleusercontent.com</string>
     <string name="app_name">BSecure</string>
 </resources>
